attached_assets/Pasted--LCAS-ASL-API-Service-Layer-v2-2-0-2025-11-19-11-49-33-ASL-Fire-1763524197370_1763524197371.txt
🚀 LCAS ASL (API Service Layer) v2.2.0 啟動中...
📅 啟動時間: 2025/11/19 上午11:49:33
🔥 ASL階段二升級：優先初始化Firebase...
📦 ASL載入P1-2範圍BL層模組...
🔄 Firebase初始化嘗試 1/3...
📡 載入Firebase配置模組...
✅ Firebase配置驗證通過
🔍 驗證Firebase配置...
✅ Firebase配置驗證通過
⚡ 初始化Firebase Admin SDK...
✅ Firebase動態配置建立成功
✅ Firebase Admin SDK初始化成功
📊 確認Firestore實例...
✅ Firestore實例取得成功
🔗 驗證Firebase連線...
 ✅ Firebase連線驗證成功
✅ Firebase完全初始化完成，準備載入BL模組...
🎯 Firebase初始化成功 (嘗試次數: 1)
🔥 Firebase已就緒，開始載入AM模組...
✅ DL模組：Firebase動態配置載入成功
✅ AM模組7.4.0 DCN-0020階段二優化版載入成功！
📋 功能概覽:
   ├── 核心帳號管理功能 (18個)
   ├── SR模組專用付費功能 (4個)
   ├── DCN-0012 API端點處理函數 (22個)
   ├── DCN-0014 API處理函數 (19個)
   ├── DCN-0020 完整帳本初始化 (3個核心功能) - 階段二優化
   └── 總計: 66個函數完整實作
🚀 階段二優化: 智能batch分割提升大量數據寫入成功率
🔧 性能提升: AM_initializeUserLedger() - 多重重試機制和錯誤恢復
🔧 穩定性強化: AM_getUserDefaultLedger() - 增強參數驗證和錯誤處理
📊 資料流優化: BK模組 → AM模組 → 智能batch處理 → Firebase高效寫入
🎯 優化目標: 提升帳本初始化的成功率和執行效率
🎉 階段二成果: 大幅提升系統穩定性和用戶體驗！
✅ AM (認證管理) 模組載入成功
🔄 開始載入BK模組...
❌ BK 模組載入失敗: Identifier 'FS' has already been declared
❌ BK 載入錯誤堆疊: /home/runner/workspace/13. Replit_Module code_BL/1301. BK.js:734
        const FS = require('./1311. FS.js');
              ^

SyntaxError: Identifier 'FS' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at loadBLModules (/home/runner/workspace/ASL.js:200:10)
🔄 BK模組載入失敗，嘗試重新載入...
❌ BK模組重試載入錯誤: Identifier 'FS' has already been declared
✅ DL (診斷日誌) 模組載入成功
✅ Firebase Admin SDK已初始化
✅ FS模組2.5.0：Firebase動態配置載入成功
[FS_LOG_v2.1.0] 2025-11-19T03:49:35.122Z | 模組初始化 | FS模組2.5.0初始化 | User: system | Function: FS_initializeModule
🎉 FS模組2.7.2階段一階段二完成：0099科目映射支援！
📌 模組版本: 2.7.2
🎯 階段一成果: 引用0099.json科目資料，移除hard-coding
🎯 階段二成果: categories子集合動態初始化支援
📋 0099科目映射: 自動讀取 Subject_code.json
📋 categories結構: parentId(大項) + categoryId(子項) + synonyms(同義詞)
📋 階段一功能: 核心基礎操作(9個函數)
📋 階段二功能: API端點支援(6個函數)
📋 階段三功能: 整合優化與驗證(6個函數)
🔧 2.7.2新增: FS_initialize0099CategoriesForLedger() - 動態初始化科目
✨ 總計實作: 30個核心函數 + 相容性函數
🚀 準備就緒: categories子集合可動態從0099.json初始化
✅ FS (Firestore) 模組載入成功
📦 P2階段模組 - 帳本與協作管理功能統一由CM模組提供...
📦 載入P2階段模組 - BM (預算管理)...
📊 BM 預算管理模組載入中...
BK模組載入失敗: Identifier 'FS' has already been declared
SR模組依賴載入警告: Identifier 'FS' has already been declared
📅 SR 排程提醒模組初始化中...
FS模組載入異常，將採用降級模式
✅ Firebase Admin SDK已初始化
✅ WH模組：Firebase動態配置初始化成功
WH模組初始化，版本: 2.2.0 (2025-01-28) - 純業務邏輯模組
✅ BM 預算管理模組載入完成
✅ BM (預算管理) 模組載入成功
📦 載入P2階段模組 - CM (協作管理)...
CM模組依賴載入警告: Identifier 'FS' has already been declared
🤝 CM 協作管理模組初始化中...
[2025-11-19T03:49:35.154Z] [INFO] [CM] CM 協作管理模組初始化完成 [Location: CM_initialize]
✅ CM 協作管理模組已成功啟動
✅ CM 協作與帳本管理模組載入完成 - 階段一修復：ID生成依賴問題已解決
✅ CM (協作管理) 模組載入成功
📦 載入DCN-0023階段二模組 - WCM (帳戶與科目管理)...
❌ WCM 模組載入失敗: Cannot find module './13. Replit_Module code_BL/1314. WCM.js'
Require stack:
- /home/runner/workspace/ASL.js
📋 模組載入狀態報告:
   ✅ FIREBASE: 已載入
   ✅ AM: 已載入
   ❌ BK: 載入失敗
   ✅ DL: 已載入
   ✅ FS: 已載入
   ✅ BM: 已載入
   ✅ CM: 已載入
   ❌ WCM: 載入失敗
❌ 關鍵模組載入失敗：需執行進一步調查
📊 載入成功率: 6/8 (75%)
⚠️ 階段三關鍵問題：BK模組載入失敗，所有記帳功能不可用
🔧 建議檢查：1)BK.js文件完整性 2)module.exports正確性 3)依賴模組可用性
🎉 LCAS ASL階段二及DCN-0023更新完成！
📦 P1-2 + P2 + DCN-0023 範圍BL模組載入狀態: Firebase(✅), AM(✅), BK(❌), DL(✅), FS(✅), BM(✅), CM(✅), WCM(❌)
🔧 純轉發機制: 57個API端點 -> 統一使用BL層標準格式
✨ 階段二及DCN-0023更新: 協作管理API端點補完，帳戶與科目管理API端點整合
🎯 協作管理功能: 帳本創建/讀取/更新/刪除，協作者管理（邀請/移除/權限更新），衝突檢測與解決
🎯 帳戶與科目管理功能: 帳戶CRUD，餘額查詢，轉帳，科目CRUD，科目樹狀結構
🔍 API 端點: /api/v1/ledgers, /api/v1/budgets, /api/v1/ledgers/:id/collaborators, /api/v1/ledgers/:id/invitations, /api/v1/ledgers/:id/conflicts, /api/v1/ledgers/:id/resolve-conflict, /api/v1/accounts, /api/v1/accounts/:id, /api/v1/accounts/:id/balance, /api/v1/accounts/types, /api/v1/accounts/transfer, /api/v1/categories, /api/v1/categories/:id, /api/v1/categories/tree
⚠️ WCM (帳戶與科目管理) 模組載入失敗，帳戶與科目管理功能不可用
🔧 建議檢查WCM.js文件完整性及依賴關係
🌐 LCAS ASL純轉發窗口已啟動於 Port 5000
📍 服務地址: http://0.0.0.0:5000
🔗 健康檢查: http://0.0.0.0:5000/health
🎯 DCN-0015第二階段完成: ASL格式驗證強化
📋 P1-2 + P2 + DCN-0023 API端點: AM(19) + BK(15) + BM(5) + CM(4) + WCM(14) = 57個端點
🔧 第二階段完成狀態: 部分就緒
📦 核心模組狀態: Firebase(✅), AM(✅), BM(✅), CM(✅), WCM(❌)
✨ 容錯機制完全移除: 100%信任BL層標準格式
🎉 第二階段修正完成: 協作管理API端點補完
🚀 DCN-0023階段二更新: 帳戶與科目管理API端點已整合
⚠️ WCM (帳戶與科目管理) 模組載入失敗，帳戶與科目管理功能不可用
成功寫入 1 條日誌到 Firestore
📅 已載入 0 個排程設定
[2025-11-19T03:49:35.897Z] [INFO] [SR] SR 排程提醒模組初始化完成 [Location: SR_initialize]
✅ SR 排程提醒模組已成功啟動